# ct2-exam

./: .gitignore  CMakeLists.txt  README.MD  main.c
Device/Include/: reg_ctboard.h  reg_stm32f4xx.h  system_ctboard.h
Device/Include/m0/: platform_ctboard.h
Device/Include/m4/: platform_ctboard.h
Device/Source/: reg_ctboard.c  reg_stm32f4xx.c
HAL/Include/: hal_adc.h  hal_common.h  hal_ct_lcd.h  hal_ct_seg7.h  hal_dac.h  hal_dma.h  hal_fmc.h  hal_gpio.h  hal_pwr.h  hal_rcc.h  hal_spi.h  hal_systick.h  hal_timer.h
HAL/Source/: hal_dac.c  hal_spi.c  hal_systick.c
